--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome To The Shepherd's Farm</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <h1>Ready To Get Tagged?</h1>
-    <p>You Can't Hide From The Shepherd.</p>
-    <img src="img/137411_full.jpeg" alt="picture of a herd of sheep">
-</body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header class="hero-box">
+      <section class="hero-image-box">
+        <img
+          class="hero-image"
+          src="img/137411_full.jpeg"
+          alt="picture of a herd of sheep"
+        />
+      </section>
+      <section class="hero-text-box">
+        <h1 class="hero-heading">Ready To Get Tagged?</h1>
+        <p class="hero-text">You Can't Hide From The Shepherd.</p>
+      </section>
+    </header>
+  </body>
 </html>
