Added more images.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome To The Shepherd's Farm</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/glightbox.min.css" />
   </head>
   <body>
     <header class="hero-box">
@@ -21,5 +22,137 @@
         <p class="hero-text">You Can't Hide From The Shepherd.</p>
       </section>
     </header>
+    <!-- Begin Portfolio Gallery -->
+    <section class="portfolio-gallery">
+      <hi>The Herd of Images</hi>
+
+      <div class="gallery-item">
+        <a href="img/1615699807840_ASH(1).png" class="glightbox">
+          <img
+            src="img/1615699807840_ASH(1).png"
+            alt="A Blue Skinned Guy Playing an Instrument"
+            class="gallery-img"
+          />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="img/20200525_134914.png" class="glightbox">
+          <img
+            src="img/20200525_134914.png"
+            alt="Sailor Moon Looking Frightened"
+            class="gallery-img"
+          />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="img/BENJAMIN SHEET 2.png" class="glightbox">
+          <img
+            src="img/BENJAMIN SHEET 2.png"
+            alt="Blonde Boy Turnaround Sheet"
+            class="gallery-img"
+          />
+        </a>
+      </div>
+
+      <div class="gallery-item">
+        <a href="img/20211109 Bush Jess RTA Holiday Final.png" class="glightbox">
+          <img
+            src="img//20211109 Bush Jess RTA Holiday Final.png"
+            alt="A boy delivers presents."
+            class="gallery-img"
+          />
+        </a>
+      </div>
+
+    </section><!-- End .portfolio-gallery -->
+    <h1>Foundation Portfolio</h1>
+    <section class="portfolio-gallery">
+      <div class="gallery-item">
+        <a
+          href="img/20210907_bush_jess_color_harmony.png"
+          class="glightbox"
+        >
+          <img
+            src="img/20210907_bush_jess_color_harmony.png"
+            alt="The butcher."
+            class="gallery-img"
+          />
+        </a>
+      </div>
+
+      <div class="gallery-item">
+        <a
+          href="img/20211021 Bush Jess Childrens Book Page Spread.png"
+          class="glightbox"
+        >
+          <img
+            src="img/20211021 Bush Jess Childrens Book Page Spread.png"
+            alt="Boy faces off against monsters."
+            class="gallery-img"
+          />
+        </a>
+      </div>
+
+      <div class="gallery-item">
+        <a
+          href="img/20210916_bush_jess_nekoma_sheet 2.png"
+          class="glightbox"
+        >
+          <img
+            src="img/20210916_bush_jess_nekoma_sheet 2.png"
+            alt="Fat cat turnaround sheet."
+            class="gallery-img"
+          />
+        </a>
+      </div>
+
+      <div class="gallery-item">
+        <a
+          href="img/20211019 Bush Jessica Logo Project REVISED.png"
+          class="glightbox"
+        >
+          <img
+            src="img/20211019 Bush Jessica Logo Project REVISED.png"
+            alt="Two logos of a sheep and CIA."
+            class="gallery-img"
+          />
+        </a>
+      </div>
+
+      <div class="gallery-item">
+        <a
+          href="img/20210903 Bush Jess Object Shadow and Value (1).jpg"
+          class="glightbox"
+        >
+          <img
+            src="img/20210903 Bush Jess Object Shadow and Value (1).jpg"
+            alt="A pair of headphones laying on a desk."
+            class="gallery-img"
+          />
+        </a>
+      </div>
+
+      <div class="gallery-item">
+        <a
+          href="img/20211029 Bush Jessica Gesture Drawing 3.jpg"
+          class="glightbox"
+        >
+          <img
+            src="img/20211029 Bush Jessica Gesture Drawing 3.jpg"
+            alt="A study of a naked male."
+            class="gallery-img"
+          />
+        </a>
+      </div>
+
+    </section><!-- End. portfolio-gallery -->
+    </section><!-- End. portfolio-container -->
+
+    <!-- Begin-->
+    <script src="js/glightbox.min.js"></script>
+    <script>
+      type="text/javascript"
+         const glightbox
+    </script>
   </body>
 </html>
