--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="css/glightbox.min.css" />
   </head>
   <body>
+    <!-- Begin Navigation -->
+    <nax class="nav-bar top-nav">
+      <h1 class="logo"><a href="index.html">Sheepish</a></h1>
+      <ul class="nav-menu">
+        <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
+        <li class="nav-item"><a href="#about">About</a></li>
+        <li class="nav-item social-nav-item">
+          <a href="https://www.instagram.com/jsheepish/?hl=en" aria-label="Link to Instagram"
+          >
+          <1 class="fab fa-instagram" aria-hidden="true"></1>
+          </a>
+        </li>
+      </ul>
+    </nax>
+     <!-- End Navigation -->
     <header class="hero-box">
       <section class="hero-image-box">
         <img
@@ -23,6 +38,7 @@
       </section>
     </header>
     <!-- Begin Portfolio Gallery -->
+    <section 1d
     <section class="portfolio-gallery">
       <hi>The Herd of Images</hi>
 
@@ -55,9 +71,9 @@
       </div>
 
       <div class="gallery-item">
-        <a href="img/20211109 Bush Jess RTA Holiday Final.png" class="glightbox">
+        <a href="img/20211110 Bush Jess RTA Holiday Final REVISED.png" class="glightbox">
           <img
-            src="img//20211109 Bush Jess RTA Holiday Final.png"
+            src="img/20211110 Bush Jess RTA Holiday Final REVISED.png"
             alt="A boy delivers presents."
             class="gallery-img"
           />
