--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
     <title>Welcome To The Shepherd's Farm</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
   </head>
   <body>
     <!-- Begin Navigation -->
-    <nax class="nav-bar top-nav">
+    <nav class="nav-bar top-nav" id="top-nav-bar">
       <h1 class="logo"><a href="index.html">Sheepish</a></h1>
       <ul class="nav-menu">
         <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
         <li class="nav-item"><a href="#about">About</a></li>
         <li class="nav-item social-nav-item">
-          <a href="https://www.instagram.com/jsheepish/?hl=en" aria-label="Link to Instagram"
+          <a
+            href="https://www.instagram.com/jsheepish/"
+            aria-label="Link to Instagram"
           >
-          <1 class="fab fa-instagram" aria-hidden="true"></1>
+            <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
         </li>
       </ul>
-    </nax>
-     <!-- End Navigation -->
+    </nav>
+    <!-- End Navigation -->
     <header class="hero-box">
       <section class="hero-image-box">
         <img
           class="hero-image"
-          src="img/137411_full.jpeg"
-          alt="picture of a herd of sheep"
+          src="img/a445f9a6db3d4961c1fd65cf147ae7511.png"
+          alt="Picture of a glitched image."
         />
       </section>
       <section class="hero-text-box">
@@ -38,137 +41,175 @@
       </section>
     </header>
     <!-- Begin Portfolio Gallery -->
-    <section 1d
-    <section class="portfolio-gallery">
-      <hi>The Herd of Images</hi>
+    <section class="portfolio-container" id="portfolio">
+      <h1>Herd of Images</h1>
+      <section class="portfolio-gallery">
+        <div class="gallery-item">
+          <a href="img/1615699807840_ASH(1).png" class="glightbox">
+            <img
+              src="img/1615699807840_ASH(1).png"
+              alt="A Blue Skinned Guy Playing an Instrument"
+              class="gallery-img"
+            />
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="img/20200525_134914.png" class="glightbox">
+            <img
+              src="img/20200525_134914.png"
+              alt="Sailor Moon Looking Frightened"
+              class="gallery-img"
+            />
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="img/BENJAMIN SHEET 2.png" class="glightbox">
+            <img
+              src="img/BENJAMIN SHEET 2.png"
+              alt="Blonde Boy Turnaround Sheet"
+              class="gallery-img"
+            />
+          </a>
+        </div>
 
-      <div class="gallery-item">
-        <a href="img/1615699807840_ASH(1).png" class="glightbox">
-          <img
-            src="img/1615699807840_ASH(1).png"
-            alt="A Blue Skinned Guy Playing an Instrument"
-            class="gallery-img"
-          />
-        </a>
-      </div>
-      <div class="gallery-item">
-        <a href="img/20200525_134914.png" class="glightbox">
-          <img
-            src="img/20200525_134914.png"
-            alt="Sailor Moon Looking Frightened"
-            class="gallery-img"
-          />
-        </a>
-      </div>
-      <div class="gallery-item">
-        <a href="img/BENJAMIN SHEET 2.png" class="glightbox">
-          <img
-            src="img/BENJAMIN SHEET 2.png"
-            alt="Blonde Boy Turnaround Sheet"
-            class="gallery-img"
-          />
-        </a>
-      </div>
+        <div class="gallery-item">
+          <a
+            href="img/20211110 Bush Jess RTA Holiday Final REVISED.png"
+            class="glightbox"
+          >
+            <img
+              src="img/20211110 Bush Jess RTA Holiday Final REVISED.png"
+              alt="A boy delivers presents."
+              class="gallery-img"
+            />
+          </a>
+        </div>
+      </section>
+      <!-- End .portfolio-gallery -->
+      <h1>Foundation Portfolio</h1>
+      <section class="portfolio-gallery">
+        <div class="gallery-item">
+          <a href="img/20210907_bush_jess_color_harmony.png" class="glightbox">
+            <img
+              src="img/20210907_bush_jess_color_harmony.png"
+              alt="The butcher."
+              class="gallery-img"
+            />
+          </a>
+        </div>
 
-      <div class="gallery-item">
-        <a href="img/20211110 Bush Jess RTA Holiday Final REVISED.png" class="glightbox">
-          <img
-            src="img/20211110 Bush Jess RTA Holiday Final REVISED.png"
-            alt="A boy delivers presents."
-            class="gallery-img"
-          />
-        </a>
-      </div>
+        <div class="gallery-item">
+          <a
+            href="img/20211021 Bush Jess Childrens Book Page Spread.png"
+            class="glightbox"
+          >
+            <img
+              src="img/20211021 Bush Jess Childrens Book Page Spread.png"
+              alt="Boy faces off against monsters."
+              class="gallery-img"
+            />
+          </a>
+        </div>
 
-    </section><!-- End .portfolio-gallery -->
-    <h1>Foundation Portfolio</h1>
-    <section class="portfolio-gallery">
-      <div class="gallery-item">
-        <a
-          href="img/20210907_bush_jess_color_harmony.png"
-          class="glightbox"
-        >
-          <img
-            src="img/20210907_bush_jess_color_harmony.png"
-            alt="The butcher."
-            class="gallery-img"
-          />
-        </a>
-      </div>
+        <div class="gallery-item">
+          <a href="img/20210916_bush_jess_nekoma_sheet 2.png" class="glightbox">
+            <img
+              src="img/20210916_bush_jess_nekoma_sheet 2.png"
+              alt="Fat cat turnaround sheet."
+              class="gallery-img"
+            />
+          </a>
+        </div>
 
-      <div class="gallery-item">
-        <a
-          href="img/20211021 Bush Jess Childrens Book Page Spread.png"
-          class="glightbox"
-        >
-          <img
-            src="img/20211021 Bush Jess Childrens Book Page Spread.png"
-            alt="Boy faces off against monsters."
-            class="gallery-img"
-          />
-        </a>
-      </div>
+        <div class="gallery-item">
+          <a
+            href="img/20211019 Bush Jessica Logo Project REVISED.png"
+            class="glightbox"
+          >
+            <img
+              src="img/20211019 Bush Jessica Logo Project REVISED.png"
+              alt="Two logos of a sheep and CIA."
+              class="gallery-img"
+            />
+          </a>
+        </div>
 
-      <div class="gallery-item">
-        <a
-          href="img/20210916_bush_jess_nekoma_sheet 2.png"
-          class="glightbox"
-        >
-          <img
-            src="img/20210916_bush_jess_nekoma_sheet 2.png"
-            alt="Fat cat turnaround sheet."
-            class="gallery-img"
-          />
-        </a>
-      </div>
+        <div class="gallery-item">
+          <a
+            href="img/20210903 Bush Jess Object Shadow and Value (1).jpg"
+            class="glightbox"
+          >
+            <img
+              src="img/20210903 Bush Jess Object Shadow and Value (1).jpg"
+              alt="A pair of headphones laying on a desk."
+              class="gallery-img"
+            />
+          </a>
+        </div>
 
-      <div class="gallery-item">
-        <a
-          href="img/20211019 Bush Jessica Logo Project REVISED.png"
-          class="glightbox"
-        >
-          <img
-            src="img/20211019 Bush Jessica Logo Project REVISED.png"
-            alt="Two logos of a sheep and CIA."
-            class="gallery-img"
-          />
-        </a>
-      </div>
+        <div class="gallery-item">
+          <a
+            href="img/20211029 Bush Jessica Gesture Drawing 3.jpg"
+            class="glightbox"
+          >
+            <img
+              src="img/20211029 Bush Jessica Gesture Drawing 3.jpg"
+              alt="A study of a naked male."
+              class="gallery-img"
+            />
+          </a>
+        </div>
+      </section>
+      <!-- End. portfolio-gallery -->
+    </section>
+    <!-- End. portfolio-container -->
 
-      <div class="gallery-item">
-        <a
-          href="img/20210903 Bush Jess Object Shadow and Value (1).jpg"
-          class="glightbox"
-        >
-          <img
-            src="img/20210903 Bush Jess Object Shadow and Value (1).jpg"
-            alt="A pair of headphones laying on a desk."
-            class="gallery-img"
-          />
-        </a>
-      </div>
+    <!-- Begin About Section -->
+    <section id="about" class="about-container section-scroll">
+      <section class="about-text">
+        <h1>Cheese it up to Create the Flow</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
+          veniam distinctio possimus mollitia fuga id vitae laudantium beatae.
+          Reprehenderit impedit, nihil dolorum repudiandae suscipit soluta?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
+          sint dolore? Accusamus temporibus beatae neque!
+        </p>
+        <p>Email Mutona at mutonaothenton@gmail.com</p>
 
-      <div class="gallery-item">
-        <a
-          href="img/20211029 Bush Jessica Gesture Drawing 3.jpg"
-          class="glightbox"
-        >
-          <img
-            src="img/20211029 Bush Jessica Gesture Drawing 3.jpg"
-            alt="A study of a naked male."
-            class="gallery-img"
-          />
-        </a>
-      </div>
-
-    </section><!-- End. portfolio-gallery -->
-    </section><!-- End. portfolio-container -->
-
-    <!-- Begin-->
+        <section class="about-social">
+          <a
+            href="https://www.instagram.com/jsheepish"
+            aria-label="Link to Instagram"
+          >
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
+        </section>
+      </section>
+      <section class="about-image">
+        <img src="img/wallpaper.jpeg" alt="Mutona Othenton Profile Pic" />
+      </section>
+    </section>
     <script src="js/glightbox.min.js"></script>
-    <script>
-      type="text/javascript"
-         const glightbox
+    <script type="text/javascript">
+      const lightbox = GLightbox({ loop: true });
+
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          document.getElementById("top-nav-bar").style.background = "#74316b";
+        } else {
+          document.getElementById("top-nav-bar").style.background = "none";
+        }
+      }
     </script>
   </body>
 </html>
