--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome To The Shepherd's Farm</title>
+    <title>Just a Bit Sheepish...</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -12,11 +12,25 @@
   <body>
     <!-- Begin Navigation -->
     <nav class="nav-bar top-nav" id="top-nav-bar">
-      <h1 class="logo"><a href="index.html">Sheepish</a></h1>
+      <h1 class="logo">
+        <a href="index.html"
+          ><img
+            class="logo-image"
+            src="img/JSheepish Logo Project.png"
+            alt="jsheepishbusiness"
+        /></a>
+      </h1>
       <ul class="nav-menu">
         <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
         <li class="nav-item"><a href="#about">About</a></li>
         <li class="nav-item social-nav-item">
+          <a
+            href="https://m.youtube.com/channel/UCVJ2h0wO6puQ1h-q12r74zQ"
+            aria-label="Link to Youtube"
+          >
+            <i class="fab fa-youtube" aria-hidden="true"></i>
+          </a>
+
           <a
             href="https://www.instagram.com/jsheepish/"
             aria-label="Link to Instagram"
@@ -31,33 +45,24 @@
       <section class="hero-image-box">
         <img
           class="hero-image"
-          src="img/a445f9a6db3d4961c1fd65cf147ae7511.png"
+          src="img/dispersion-abstract_1575660123.jpg"
           alt="Picture of a glitched image."
         />
       </section>
       <section class="hero-text-box">
-        <h1 class="hero-heading">Ready To Get Tagged?</h1>
-        <p class="hero-text">You Can't Hide From The Shepherd.</p>
+        <h1 class="hero-heading">Just a Little Sheepish</h1>
+        <p class="hero-text"></p>
       </section>
     </header>
     <!-- Begin Portfolio Gallery -->
     <section class="portfolio-container" id="portfolio">
-      <h1>Herd of Images</h1>
+      <h1>The Shepherd's Por</h1>
       <section class="portfolio-gallery">
-        <div class="gallery-item">
-          <a href="img/1615699807840_ASH(1).png" class="glightbox">
-            <img
-              src="img/1615699807840_ASH(1).png"
-              alt="A Blue Skinned Guy Playing an Instrument"
-              class="gallery-img"
-            />
-          </a>
-        </div>
         <div class="gallery-item">
           <a href="img/20200525_134914.png" class="glightbox">
             <img
               src="img/20200525_134914.png"
-              alt="Sailor Moon Looking Frightened"
+              alt="Sailor Moon Looking Frightened."
               class="gallery-img"
             />
           </a>
@@ -66,7 +71,59 @@
           <a href="img/BENJAMIN SHEET 2.png" class="glightbox">
             <img
               src="img/BENJAMIN SHEET 2.png"
-              alt="Blonde Boy Turnaround Sheet"
+              alt="Blonde Boy Turnaround Sheet."
+              class="gallery-img"
+            />
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a
+            href="img/20211116 Bush Jessica Vector Portrait (1).png"
+            class="glightbox"
+          >
+            <img
+              src="img/20211116 Bush Jessica Vector Portrait (1).png"
+              alt="A self portrait."
+              class="gallery-img"
+            />
+          </a>
+        </div>
+
+        <div class="gallery-item">
+          <a href="img/1615699807840_ASH(1).png" class="glightbox">
+            <img
+              src="img/1615699807840_ASH(1).png"
+              alt="A Blue Creature Playing the Lute."
+              class="gallery-img"
+            />
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="video/Haunt Me-1.mp4" class="glightbox">
+            <video
+              autoplay
+              muted
+              src="video/Haunt Me-1.mp4"
+              alt="A Boy Confronts His Father."
+              class="gallery-img"
+            />
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a href="img/20210909_bush_jess_pillow_jump1.gif" class="glightbox">
+            <img
+              src="img/20210909_bush_jess_pillow_jump1.gif"
+              alt="A Pillow Jumping."
+              class="gallery-img"
+            />
+          </a>
+        </div>
+
+        <div class="gallery-item">
+          <a href="img/20210907_bush_jess_color_harmony.png" class="glightbox">
+            <img
+              src="img/20210907_bush_jess_color_harmony.png"
+              alt="The Butcher."
               class="gallery-img"
             />
           </a>
@@ -79,33 +136,7 @@
           >
             <img
               src="img/20211110 Bush Jess RTA Holiday Final REVISED.png"
-              alt="A boy delivers presents."
-              class="gallery-img"
-            />
-          </a>
-        </div>
-      </section>
-      <!-- End .portfolio-gallery -->
-      <h1>Foundation Portfolio</h1>
-      <section class="portfolio-gallery">
-        <div class="gallery-item">
-          <a href="img/20210907_bush_jess_color_harmony.png" class="glightbox">
-            <img
-              src="img/20210907_bush_jess_color_harmony.png"
-              alt="The butcher."
-              class="gallery-img"
-            />
-          </a>
-        </div>
-
-        <div class="gallery-item">
-          <a
-            href="img/20211021 Bush Jess Childrens Book Page Spread.png"
-            class="glightbox"
-          >
-            <img
-              src="img/20211021 Bush Jess Childrens Book Page Spread.png"
-              alt="Boy faces off against monsters."
+              alt="A Boy Delivering Presents."
               class="gallery-img"
             />
           </a>
@@ -115,20 +146,20 @@
           <a href="img/20210916_bush_jess_nekoma_sheet 2.png" class="glightbox">
             <img
               src="img/20210916_bush_jess_nekoma_sheet 2.png"
-              alt="Fat cat turnaround sheet."
+              alt="Fat Cat Turnaround Sheet."
               class="gallery-img"
             />
           </a>
         </div>
 
         <div class="gallery-item">
-          <a
-            href="img/20211019 Bush Jessica Logo Project REVISED.png"
-            class="glightbox"
-          >
-            <img
-              src="img/20211019 Bush Jessica Logo Project REVISED.png"
-              alt="Two logos of a sheep and CIA."
+          <a href="video/20210923_Bush_Jess_Punch.mp4" class="glightbox">
+            <video
+              autoplay
+              muted
+              loop
+              src="video/20210923_Bush_Jess_Punch.mp4"
+              alt="A Fat Cat Punching a Child."
               class="gallery-img"
             />
           </a>
@@ -141,7 +172,7 @@
           >
             <img
               src="img/20210903 Bush Jess Object Shadow and Value (1).jpg"
-              alt="A pair of headphones laying on a desk."
+              alt="A Pair of Headphones Laying on a Desk."
               class="gallery-img"
             />
           </a>
@@ -149,13 +180,38 @@
 
         <div class="gallery-item">
           <a
-            href="img/20211029 Bush Jessica Gesture Drawing 3.jpg"
+            href="img/20211112  Bush Jessica Bacon and Eggs.png"
             class="glightbox"
           >
             <img
-              src="img/20211029 Bush Jessica Gesture Drawing 3.jpg"
-              alt="A study of a naked male."
+              src="img/20211112  Bush Jessica Bacon and Eggs.png"
+              alt="An Image of a Plate of Bacon and Eggs."
               class="gallery-img"
+            />
+          </a>
+        </div>
+
+        <div class="gallery-item">
+          <a href="img/Blooming Flower.jpg" class="glightbox">
+            <img
+              src="img/Blooming Flower.jpg"
+              alt="A Blooming Purple Flower in the Sun."
+              class="gallery-img"
+            />
+          </a>
+        </div>
+        <div class="gallery-item">
+          <a
+            href="video/20211206 Bush Jessica Gestalt Principals_1.mp4"
+            class="glightbox"
+          >
+            <video
+              autoplay
+              muted
+              loop
+              src="video/20211206 Bush Jessica Gestalt Principals_1.mp4"
+              alt="A Short Stop Motion Film for 2D Design"
+              class="gallery-img video-center"
             />
           </a>
         </div>
@@ -167,7 +223,7 @@
     <!-- Begin About Section -->
     <section id="about" class="about-container section-scroll">
       <section class="about-text">
-        <h1>Cheese it up to Create the Flow</h1>
+        <h1>Just a Bit Sheepish...</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
           veniam distinctio possimus mollitia fuga id vitae laudantium beatae.
@@ -177,19 +233,28 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
           sint dolore? Accusamus temporibus beatae neque!
         </p>
-        <p>Email Mutona at mutonaothenton@gmail.com</p>
+        <p>
+          <a href="mailto:jsheepishbusiness@gmail.com">Email jsheepishbusiness@gmail.com</a> for information or commissions!
+        </p>
 
         <section class="about-social">
           <a
             href="https://www.instagram.com/jsheepish"
             aria-label="Link to Instagram"
+            
           >
             <i class="fab fa-instagram" aria-hidden="true"></i>
+
+            <a
+            href="https://m.youtube.com/channel/UCVJ2h0wO6puQ1h-q12r74zQ"
+            aria-label="Link to Youtube"
+            >
+             <i class="fab fa-youtube" aria-hidden="true"></i>
           </a>
         </section>
       </section>
       <section class="about-image">
-        <img src="img/wallpaper.jpeg" alt="Mutona Othenton Profile Pic" />
+        <img src="img/JSheepish Logo 3.png" alt="JSheepish Profile Pic" />
       </section>
     </section>
     <script src="js/glightbox.min.js"></script>
@@ -205,7 +270,8 @@
           document.body.scrollTop > 20 ||
           document.documentElement.scrollTop > 20
         ) {
-          document.getElementById("top-nav-bar").style.background = "#74316b";
+          document.getElementById("top-nav-bar").style.background =
+            "rgba(175,39,28,0.9)";
         } else {
           document.getElementById("top-nav-bar").style.background = "none";
         }
