Added Bio and logos.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Just a Bit Sheepish...</title>
+    <title>JSheepish</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/glightbox.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -50,13 +50,13 @@
         />
       </section>
       <section class="hero-text-box">
-        <h1 class="hero-heading">Just a Little Sheepish</h1>
+        <h1 class="hero-heading">Just a Bit Sheepish...<Sheepish class=""></Sheepish></h1>
         <p class="hero-text"></p>
       </section>
     </header>
     <!-- Begin Portfolio Gallery -->
     <section class="portfolio-container" id="portfolio">
-      <h1>The Shepherd's Por</h1>
+      <h1>The Shepherd's Portfolio</h1>
       <section class="portfolio-gallery">
         <div class="gallery-item">
           <a href="img/20200525_134914.png" class="glightbox">
@@ -223,18 +223,21 @@
     <!-- Begin About Section -->
     <section id="about" class="about-container section-scroll">
       <section class="about-text">
-        <h1>Just a Bit Sheepish...</h1>
+        <h1>A Bit About Me:</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
-          veniam distinctio possimus mollitia fuga id vitae laudantium beatae.
-          Reprehenderit impedit, nihil dolorum repudiandae suscipit soluta?
+          My real name is Jessica Bush but I'd rather be called Jess. I put the "J" in 
+          "JSheepish"! I'm an American-born artist who is studying to become an animator. 
+          Inspired by the world of both animation and graphic novels, I strive to 
+          create a television series with a similar style to Japanese animation, 
+          with a hint of a Western kick thrown in.
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
-          sint dolore? Accusamus temporibus beatae neque!
+          Telling stories through art is a dream for me. If I can make characters 
+          that people care about, then I have succeeded in life.
         </p>
         <p>
-          <a href="mailto:jsheepishbusiness@gmail.com">Email jsheepishbusiness@gmail.com</a> for information or commissions!
+          <a href="mailto:jsheepishbusiness@gmail.com">Email jsheepishbusiness@gmail.com</a> for 
+          commission information or questions.
         </p>
 
         <section class="about-social">
