--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
   <body>
     <!-- Begin Navigation -->
     <nav class="nav-bar top-nav" id="top-nav-bar">
-      <h1 class="logo">
-        <a href="index.html"
-          ><img
+      <div class="logo">
+        <a href="index.html">
+          <img
             class="logo-image"
             src="img/JSheepish Logo Project.png"
             alt="jsheepishbusiness"
-        /></a>
-      </h1>
+        />
+      </a>
+    </div>
       <ul class="nav-menu">
         <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
         <li class="nav-item"><a href="#about">About</a></li>
         <li class="nav-item social-nav-item">
-          <a
-            href="https://m.youtube.com/channel/UCVJ2h0wO6puQ1h-q12r74zQ"
-            aria-label="Link to Youtube"
-          >
-            <i class="fab fa-youtube" aria-hidden="true"></i>
-          </a>
-
+        </li>
+        <li class="nav-item social-nav-item">
           <a
             href="https://www.instagram.com/jsheepish/"
             aria-label="Link to Instagram"
           >
             <i class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
+        </li>
+        <a
+            href="https://m.youtube.com/channel/UCVJ2h0wO6puQ1h-q12r74zQ"
+            aria-label="Link to Youtube">
+            <i class="fab fa-youtube" aria-hidden="true"></i>
           </a>
         </li>
       </ul>
