--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
         </li>
+        <li class="nav-item social-nav-item">
         <a
             href="https://m.youtube.com/channel/UCVJ2h0wO6puQ1h-q12r74zQ"
             aria-label="Link to Youtube">
@@ -241,6 +242,7 @@
           <a href="mailto:jsheepishbusiness@gmail.com">Email jsheepishbusiness@gmail.com</a> for 
           commission information or questions.
         </p>
+        <p><a href="docs/2021 Bush Jessica Portfolio.pdf">Download my portfolio as a PDF</a></p>
 
         <section class="about-social">
           <a
