--- a/index.html
+++ b/index.html
@@ -228,22 +228,21 @@
       <section class="about-text">
         <h1>A Bit About Me:</h1>
         <p>
-          My real name is Jessica Bush but I'd rather be called Jess. I put the "J" in 
+            My real name is Jessica Bush but I'd rather be called Jess. I put the "J" in 
           "JSheepish"! I'm an American-born artist who is studying to become an animator. 
           Inspired by the world of both animation and graphic novels, I strive to 
           create a television series with a similar style to Japanese animation, 
           with a hint of a Western kick thrown in.
         </p>
         <p>
-          Telling stories through art is a dream for me. If I can make characters 
+            Telling stories through art is a dream for me. If I can make characters 
           that people care about, then I have succeeded in life.
         </p>
+        <p><a href="docs/2021 Bush Jessica Portfolio.pdf">  Check out my portfolio as a PDF!</a></p>
         <p>
-          <a href="mailto:jsheepishbusiness@gmail.com">Email jsheepishbusiness@gmail.com</a> for 
+          <a href="mailto:jsheepishbusiness@gmail.com"> Email jsheepishbusiness@gmail.com</a> for 
           commission information or questions.
         </p>
-        <p><a href="docs/2021 Bush Jessica Portfolio.pdf">Download my portfolio as a PDF</a></p>
-
         <section class="about-social">
           <a
             href="https://www.instagram.com/jsheepish"
